# norm

./: CHANGELOG.md  Dockerfile  README.md  pyproject.toml
app/: main.py  test.py
app/api/: v1.py
app/api/endpoints/: normalization.py
app/core/: config.py  exceptions.py
app/normalizers/: base.py  factory.py
app/normalizers/de/: strategy.py
app/normalizers/de/data/: currencies.json  measurements.json  months.json  ordinals.json
app/normalizers/de/rules/: base_handler.py  currency_handler.py  date_handler.py  measurement_handler.py  multiplication_handler.py  number_handler.py  roman_numeral_handler.py
app/normalizers/en/: strategy.py
app/normalizers/en/data/: currencies.json  measurements.json  ordinals.json  roman_numerals.json
app/normalizers/en/rules/: base_handler.py  currency_handler.py  date_handler.py  measurement_handler.py  multiplication_handler.py  number_handler.py  roman_numeral_handler.py
app/normalizers/sr/: strategy.py
app/normalizers/sr/data/: brands.json  currencies.json  measurements.json  months.json  ordinals.json  ordinals_feminine.json  ordinals_neuter.json  roman_numerals.json
app/normalizers/sr/rules/: base_handler.py  brand_handler.py  currency_handler.py  date_handler.py  measurement_handler.py  multiplication_handler.py  number_handler.py  roman_numeral_handler.py  year_handler.py
app/schemas/: normalization.py
